# advent-of-code-2025

./: .gitignore  README.md  mise.toml  pyproject.toml
.mise-tasks/: prepare.sh
src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
