[project]
name = "advent-of-code"
version = "1"
description = "Advent of Code 2025 - year of Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elf>=1.1.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "scipy-stubs>=1.16.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 80
